add function for adding thoughts in js

--- a/index.html
+++ b/index.html
@@ -10,12 +10,17 @@
     <body>
         <h1>Just type your thoughts</h1>
 
-        <div class="input-row"">
+        <div class="input-row">
             <input type="text" id="thoughtInput"
                 placeholder="Type your thought here...">
             <button id="addThoughtBtn">Add Thought</button>
+            <button id="clearAllBtn">Clear All</button>
         </div>
 
+        <p id="count">No thoughts yet.</p>
+
         <ul id="thoughtList"></ul>
+
+        <script src="js/app.js"></script>
     </body>
 </html>
